<resources>
    <string name="app_name">Mobile Final Project</string>
    <string name="title_activity_map">Map</string>

    <!-- MAIN MENU -->
    <string name="menu_title">SearchU</string>
    <string name="menu_profile">View Profile</string>
    <string name="menu_search">Search for Colleges</string>
    <string name="menu_savedlist">View Saved Colleges</string>
    <string name="menu_about">About the App</string>
    <string name="menu_map">College Map</string>

    <!-- ABOUT PAGE-->
    <string name="about_title">About the App</string>
    <string name="about_description">This app is meant to be a tool for students who are applying to colleges. Students can search for colleges and view their location on the map. SearchU is in its early stages, but there are many more features to come.</string>

    <!-- USER PROFILE -->
    <string name="profile_header">User Profile</string>
    <string name="profile_name">Name</string>
    <string name="profile_school">High School</string>
    <string name="profile_intendedmajor">Intended Major:</string>

    <!-- COLLEGE SEARCH -->
    <string name="search_header">College Search</string>
    <string name="search_byterm">Search by term:</string>
    <string name="search_searchbar">Search</string>
    <string name="search_submit">Submit</string>
    <string name="search_bymajor">Or search by major: </string>
    <string name="search_results">No results.</string>
    <string name="search_category">Category:</string>

</resources>
