<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rumboldfabbro.mobilefinalproject.MainActivity">

    <TextView
        android:text="@string/menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menu_title"
        android:textStyle="normal|bold"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp" />

    <Button
        android:text="@string/menu_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:id="@+id/menu_profile"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_below="@+id/menu_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/menu_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menu_search"
        android:layout_alignBaseline="@+id/menu_profile"
        android:layout_alignBottom="@+id/menu_profile"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="14dp"
        android:layout_marginEnd="14dp" />

    <Button
        android:text="@string/menu_savedlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:id="@+id/menu_savedlist"
        android:layout_below="@+id/menu_profile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/menu_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menu_about"
        android:layout_alignBaseline="@+id/menu_savedlist"
        android:layout_alignBottom="@+id/menu_savedlist"
        android:layout_alignLeft="@+id/menu_search"
        android:layout_alignStart="@+id/menu_search"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />

</RelativeLayout>
