<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/search_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/search_bymajor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:id="@+id/search_bymajor"
        android:textSize="24sp"
        android:layout_below="@+id/search_submit1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/search_byterm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:id="@+id/search_byterm"
        android:textSize="24sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/search_searchbar"
        android:ems="10"
        android:layout_marginTop="34dp"
        android:id="@+id/editText"
        android:layout_below="@+id/search_byterm"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/search_attribute"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/search_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_submit1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_bymajor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:id="@+id/search_major" />

    <Button
        android:text="@string/search_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_major"
        android:layout_alignLeft="@+id/search_submit1"
        android:layout_alignStart="@+id/search_submit1"
        android:layout_marginTop="37dp"
        android:id="@+id/search_submit2" />
</RelativeLayout>